--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ node_modules/
 /tmp/*
 !/log/.keep
 !/tmp/.keep
-
+node_modules
 # Ignore pidfiles, but keep the directory.
 /tmp/pids/*
 !/tmp/pids/
