--- a/.gitignore
+++ b/.gitignore
@@ -12,12 +12,11 @@ node_modules/
 /tmp/*
 !/log/.keep
 !/tmp/.keep
-node_modules
 # Ignore pidfiles, but keep the directory.
 /tmp/pids/*
 !/tmp/pids/
 !/tmp/pids/.keep
-
+**/node_modules
 # Ignore uploaded files in development.
 /storage/*
 !/storage/.keep
